[tool.poetry]
    name = "pyhnix"
    version = "0.1.0"
    description = ""
    authors = ["arcinfini <arcinfini@arcinfini.net>"]
    readme = "README.md"

[tool.poetry.dependencies]
    python = "^3.11"
    "discord.py" = "^2.3.2"
    python-dotenv = "^1.0.1"
    rich = "^13.7.0"
    asyncpg = "^0.29.0"

[tool.poetry.group.dev.dependencies]
    ruff = "^0.2.1"
    mypy = "^1.8.0"
    pre-commit = "^3.6.1"
    pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"

[build-system]
    requires = ["poetry-core"]
    build-backend = "poetry.core.masonry.api"

[tool.mypy]
    python_version = "3.11"

    warn_return_any = true
    ignore_missing_imports = true
    warn_unused_configs = true
    warn_unused_ignores = true
    disallow_untyped_defs = true

[tool.ruff]
    src = ["bot"]
    # extend-exclude = ["src/internal/check.py"]

    line-length = 80
    show-fixes = true

[tool.ruff.lint]
    select = ["ANN", "B", "C4", "D", "DTZ", "E", "F", "I", "ISC", "INT", "N", "PGH", "PIE", "Q", "RET", "RSE", "RUF", "S", "SIM", "T20", "TID", "UP", "W"]

    ignore = [
        "ANN101", "ANN204", "ANN401", 
        "D100", "D104", "D107", "D203", "D213", "D415",
        "E731",
        "ISC001",
        "N818",
        "RUF006",
        "UP007"
    ]
    extend-select = ["I001"]
    ignore-init-module-imports = true

[tool.ruff.lint.extend-per-file-ignores]
"tests/*" = ["D101", "D103", "E501", "S101", ]

[tool.ruff.lint.isort]
known-first-party = ["bot"]
order-by-type = false
case-sensitive = true
